<resources>
    <string name="app_name">Vens?</string>
    <string name="title_map">Map</string>
    <string name="title_list">List</string>
    <string name="title_favourites">Favourites</string>
    <string name="map_store_action">See detail</string>
    <string name="title_filter">Filter</string>
    <string name="generic_error_not_done_yet_title">Not available</string>
    <string name="generic_error_not_done_yet_message">Sorry, this functionality will be added shortly</string>
    <string name="generic_positive_button">OK</string>
    <string name="list_screen_title">Shops</string>
    <string name="list_contact">Contact the shopkeeper</string>
    <string name="list_distance_no_permission">Location needed</string>
    <string name="list_distance_m">%sm, about %d min</string>
    <string name="list_distance_km">%skm, about %d min</string>
    <string name="list_empty_title">We have not found shops with this filter</string>
    <string name="list_empty_message">Please, select another filter and find great shops</string>
    <string name="detail_distance_no_permission">Location permission needed</string>
    <string name="detail_distance_m">Distance of %sm, about %d min</string>
    <string name="detail_distance_km">Distance of %skm, about %d min</string>
    <string name="detail_schedules_upcoming">Schedules will be available shortly</string>
    <string name="favourites_screen_title">My shops</string>
    <string name="favourites_screen_empty_title">You have no favourite shops added</string>
    <string name="favourites_screen_empty_body">Tap on the heart icon of any shop to add it to the list.\n
    You will have quick access and notifications.</string>
    <string name="filter_priority_title">Priority (coming soon)</string>
    <string name="filter_priority_orders">Takes orders</string>
    <string name="filter_priority_open">Is open</string>
    <string name="filter_priority_delivers">Delivers home</string>
    <string name="filter_distance_title">Distance</string>
    <string name="filter_distance">%sm</string>
    <string name="filter_distance_far">All</string>
    <string name="filter_categories_title">Categories</string>
    <string name="filter_must_have_title">Must have (coming soon)</string>
    <string name="filter_must_have_masks">Medical mask</string>
    <string name="filter_must_have_hand_sanitizer">Hand sanitizer</string>
    <string name="filter_must_have_gloves">Gloves</string>
    <string name="filter_crowded_title">Crowd (coming soon)</string>
    <string name="filter_crowded_small">Small</string>
    <string name="filter_crowded_medium">Medium</string>
    <string name="filter_crowded_large">Large</string>
    <string name="filter_crowded_unknown">Unknown</string>
    <string name="filter_snackbar_map">No shops found with the filter selected</string>
    <string name="filter_snackbar_map_action">@string/title_filter</string>
    <string name="store_type_grocery">Grocery</string>
    <string name="store_type_eggs_and_birds">Eggs and poultry</string>
    <string name="store_type_beauty">Beauty</string>
    <string name="store_type_mall">Mall</string>
    <string name="store_type_gallery">Gallery</string>
    <string name="store_type_home">Home</string>
    <string name="store_type_market">Market</string>
    <string name="store_type_fashion">Fashion</string>
    <string name="store_type_leisure">Leisure</string>
    <string name="store_type_everyday">Everyday</string>
    <string name="store_type_services">Services</string>
    <string name="store_type_other">Other</string>
    <string name="store_type_fruits_veggies">Fruits and veggies</string>
    <string name="store_type_prepared_dishes">Prepared dishes</string>
    <string name="store_type_look">Look</string>
    <string name="store_type_food">Food</string>
    <string name="store_type_leisure_and_culture">Leisure and culture</string>
    <string name="store_type_bakery_pastry">Bakeries, Pastry and dairy</string>
    <string name="store_subtype_eggs_and_birds">Eggs and Birds</string>
    <string name="store_subtype_others">Others</string>
    <string name="store_subtype_self_service_supermarket">Self-service and supermarkets</string>
    <string name="store_subtype_drinks">Drinks</string>
    <string name="store_subtype_meat_pork">Meat and pork</string>
    <string name="store_subtype_fruits_veggies">Fruits and veggies</string>
    <string name="store_subtype_poultry">Poultry</string>
    <string name="store_subtype_bread_dairy">Bread and dairy</string>
    <string name="store_subtype_fish">Fish</string>
    <string name="store_subtype_ready_meals">Ready meals</string>
    <string name="store_subtype_bazaar">Bazaar</string>
    <string name="store_subtype_photo">Photography</string>
    <string name="store_subtype_memories">Memories</string>
    <string name="store_subtype_memories_bazaars">Memories and bazaars</string>
    <string name="store_subtype_optics">Optics</string>
    <string name="store_subtype_optics_photo">Optics and photography</string>
    <string name="store_subtype_aesthetics">Aesthetics</string>
    <string name="store_subtype_hairdresser">Hairdresser</string>
    <string name="store_subtype_mall">Mall</string>
    <string name="store_subtype_gallery">Gallery</string>
    <string name="store_subtype_appliances">Appliances</string>
    <string name="store_subtype_flower">Flower shop</string>
    <string name="store_subtype_home_equipment">Home equipment</string>
    <string name="store_subtype_wooden_furniture">Wooden furniture</string>
    <string name="store_subtype_hardware">Hardware</string>
    <string name="store_subtype_stamps_shop">Stamps shop</string>
    <string name="store_subtype_market">Market</string>
    <string name="store_subtype_shoe_shop">Shoe shop</string>
    <string name="store_subtype_jewelry_store">Jewelry store</string>
    <string name="store_subtype_haberdashery">Haberdashery</string>
    <string name="store_subtype_dress">Dress</string>
    <string name="store_subtype_computer_store">Computer store</string>
    <string name="store_subtype_toys_and_sports">Toys and sports</string>
    <string name="store_subtype_books">Books</string>
    <string name="store_subtype_music">Music</string>
    <string name="store_subtype_drugstore_perfumery">Drugstore and perfumery</string>
    <string name="store_subtype_pharmacy">Pharmacy</string>
    <string name="store_subtype_dietetics">Herbal and dietetics</string>
    <string name="store_subtype_tobacco_shop">Tobacco shop</string>
    <string name="store_subtype_maintenance_cleaning">Maintenance and cleaning</string>
    <string name="store_subtype_car_appliance_repairing">Car and appliance repairing</string>
    <string name="store_subtype_health">Health and care</string>
    <string name="store_subtype_dry_cleaner">Dry cleaner</string>
    <string name="store_subtype_vet_store">Vet store</string>
    <string name="store_subtype_prepared_dishes">Prepared dishes</string>
    <string name="store_subtype_equipment">Equipment</string>
    <string name="store_subtype_repairs">Repairs</string>
    <string name="store_subtype_beauty_center">Beauty center</string>
    <string name="store_subtype_furniture">Furniture</string>
    <string name="store_subtype_stamps_coins_antiques">Stamps, coins and antiques</string>
    <string name="store_subtype_footwear_leather">Footwear and leader</string>
    <string name="store_subtype_shopping_center">Shopping center</string>
    <string name="store_subtype_shopping_gallery">Shopping gallery</string>
    <string name="on_boarding_screen_skip_text">Skip</string>
    <string name="on_boarding_screen_title_slide_one">Your trust commerce</string>
    <string name="on_boarding_screen_body_slide_one">Support local stores, save time and explore around you, while helping your neighbourhood.</string>
    <string name="on_boarding_screen_title_slide_two">Reduce waiting time</string>
    <string name="on_boarding_screen_body_slide_two">Compare the influx of people in your favourite shops, so that you know
                    where to go to save time and avoid people</string>
    <string name="on_boarding_screen_title_slide_three">Direct communication</string>
    <string name="on_boarding_screen_body_slide_three">Have a closer and easier communication with your favourite shops:
        chat, receive alerts, see schedule changes, check product availability, find out about new services, promotions…</string>
</resources>