<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="hackovid.vens.features.filter.FilterBottomSheetViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="16dp"
                    >
                    <View
                        android:layout_width="@dimen/close_button_size"
                        android:layout_height="@dimen/close_button_size"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/title_filter"
                        style="@style/TextAppearance.Custom.Title"
                        />
                    <ImageView
                        android:layout_width="@dimen/close_button_size"
                        android:layout_height="@dimen/close_button_size"
                        android:padding="16dp"
                        android:src="@drawable/ic_close"
                        android:tint="@color/dark_on_white"
                        android:onClick="@{v -> viewModel.onCloseClicked()}"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
                    android:layout_marginBottom="16dp"
                    android:text="@string/filter_priority_title"
                    style="@style/TextAppearance.Custom.Subtitle"
                    android:visibility="gone"
                    />

                <include
                    layout="@layout/layout_filter_row"
                    bind:text0="@{@string/filter_priority_orders}"
                    bind:text1="@{@string/filter_priority_open}"
                    bind:text2="@{@string/filter_priority_delivers}"
                    bind:selected0="@{viewModel.priorities.get(0) == true}"
                    bind:selected1="@{viewModel.priorities.get(1) == true}"
                    bind:selected2="@{viewModel.priorities.get(2) == true}"
                    bind:img0="@{@drawable/ic_phone}"
                    bind:img1="@{@drawable/ic_add_shopping_cart}"
                    bind:img2="@{@drawable/ic_directions_bike}"
                    bind:onClick0="@{v -> viewModel.onPrioritySelected(0)}"
                    bind:onClick1="@{v -> viewModel.onPrioritySelected(1)}"
                    bind:onClick2="@{v -> viewModel.onPrioritySelected(2)}"
                    bind:imagesVisible="@{true}"
                    bind:visibility="@{View.GONE}"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
                    android:layout_marginBottom="16dp"
                    android:text="@string/filter_distance_title"
                    style="@style/TextAppearance.Custom.Subtitle"
                    />

                <include
                    layout="@layout/layout_filter_row"
                    bind:text0="@{@string/filter_distance(viewModel.shortDistance)}"
                    bind:text1="@{@string/filter_distance(viewModel.mediumDistance)}"
                    bind:text2="@{@string/filter_distance_far}"
                    bind:selected0="@{viewModel.distance == 0}"
                    bind:selected1="@{viewModel.distance == 1}"
                    bind:selected2="@{viewModel.distance == 2}"
                    bind:img0="@{@drawable/ic_filter_distance_low}"
                    bind:img1="@{@drawable/ic_filter_distance_medium}"
                    bind:img2="@{@drawable/ic_filter_distance_high}"
                    bind:onClick0="@{v -> viewModel.onDistanceSelected(0)}"
                    bind:onClick1="@{v -> viewModel.onDistanceSelected(1)}"
                    bind:onClick2="@{v -> viewModel.onDistanceSelected(2)}"
                    bind:imagesVisible="@{true}"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
                    android:layout_marginBottom="16dp"
                    android:text="@string/filter_categories_title"
                    style="@style/TextAppearance.Custom.Subtitle"
                    />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/categories_chipgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
                    android:layout_marginBottom="16dp"
                    android:text="@string/filter_must_have_title"
                    style="@style/TextAppearance.Custom.Subtitle"
                    android:visibility="gone"
                    />

                <include
                    layout="@layout/layout_filter_row"
                    bind:text0="@{@string/filter_must_have_masks}"
                    bind:text1="@{@string/filter_must_have_hand_sanitizer}"
                    bind:text2="@{@string/filter_must_have_gloves}"
                    bind:img0="@{@drawable/ic_filter_mask}"
                    bind:img1="@{@drawable/ic_filter_water}"
                    bind:img2="@{@drawable/ic_filter_glove}"
                    bind:selected0="@{viewModel.mustHave.get(0) == true}"
                    bind:selected1="@{viewModel.mustHave.get(1) == true}"
                    bind:selected2="@{viewModel.mustHave.get(2) == true}"
                    bind:onClick0="@{v -> viewModel.onMustHaveSelected(0)}"
                    bind:onClick1="@{v -> viewModel.onMustHaveSelected(1)}"
                    bind:onClick2="@{v -> viewModel.onMustHaveSelected(2)}"
                    bind:imagesVisible="@{true}"
                    bind:visibility="@{View.GONE}"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
                    android:layout_marginBottom="16dp"
                    android:text="@string/filter_crowded_title"
                    style="@style/TextAppearance.Custom.Subtitle"
                    android:visibility="gone"
                    />

                <include
                    layout="@layout/layout_filter_row"
                    bind:text0="@{@string/filter_crowded_small}"
                    bind:text1="@{@string/filter_crowded_medium}"
                    bind:text2="@{@string/filter_crowded_large}"
                    bind:img0="@{@drawable/ic_filter_crowd_low}"
                    bind:img1="@{@drawable/ic_filter_crowd_medium}"
                    bind:img2="@{@drawable/ic_filter_crowd_high}"
                    bind:selected0="@{viewModel.crowd == 0}"
                    bind:selected1="@{viewModel.crowd == 1}"
                    bind:selected2="@{viewModel.crowd == 2}"
                    bind:onClick0="@{v -> viewModel.onCrowdSelected(0)}"
                    bind:onClick1="@{v -> viewModel.onCrowdSelected(1)}"
                    bind:onClick2="@{v -> viewModel.onCrowdSelected(2)}"
                    bind:imagesVisible="@{true}"
                    bind:visibility="@{View.GONE}"
                    />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/storeActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="36dp"
                android:layout_marginVertical="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_filter"
                android:onClick="@{v -> viewModel.onFilterClicked()}"
                app:cornerRadius="@dimen/button_corner_radius"
                style="@style/RoundedButton"
                />
        </FrameLayout>
    </FrameLayout>
</layout>
